# strix-lang

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  PHILOSOPHY.md  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  config.yml
.github/workflows/: build.yml
docs/: .dockerignore  Dockerfile  nginx.conf
scripts/: repl.sh  test_repl.sh
src/: repl.c  repl.cpp  repl.h  repl.hpp  strix.c  strix.cpp  strix_tokenizer_api.cpp  strix_tokenizer_api.h  token.cpp  token.hpp  utils.c  utils.cpp  utils.h  utils.hpp
src/cli/: commands.cpp  commands.hpp  main.cpp
src/lib/: errors.cpp  errors.hpp  io.cpp  io.hpp
web/: astro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: config.ts  constants.ts
web/src/components/: BackButton.astro  Breadcrumb.astro  Datetime.astro  Footer.astro  Header.astro  Pagination.astro  ShareLinks.astro
web/src/data/blog/_2025/: entendendo-uma-linguagem-de-programacao-compilada.md  primeiros_passos_no_tokenizador.md
web/src/layouts/: PostDetails.astro
web/src/pages/: 404.astro  index.astro  pesquisar.astro  sobre.md
web/src/pages/arquivos/: index.astro
web/src/pages/postagens/: [...page].astro
web/src/pages/tags/: index.astro
web/src/pages/tags/[tag]/: [...page].astro
web/src/styles/: global.css
web/src/utils/: getPath.ts
